resources/variants/dev/testbed/build_error_directWired4withEncoder.log
>make dev/testbed:directWired4withEncoder:build RELEASE_REVISION=0 IS_RESOURCE_ORIGIN_ONLINE=1
src/modules/km0/keyboard/keyScanner_encoderBasic.c:29:13: error: initializer element is not constant
   0, -1, 1, err, 1, 0, err, -1, -1, err, 0, 1, err, 1, -1, 0
             ^
src/modules/km0/keyboard/keyScanner_encoderBasic.c:29:13: note: (near initialization for ‘encoder_count_delta_table[3]’)
src/modules/km0/keyboard/keyScanner_encoderBasic.c:29:24: error: initializer element is not constant
   0, -1, 1, err, 1, 0, err, -1, -1, err, 0, 1, err, 1, -1, 0
                        ^
src/modules/km0/keyboard/keyScanner_encoderBasic.c:29:24: note: (near initialization for ‘encoder_count_delta_table[6]’)
src/modules/km0/keyboard/keyScanner_encoderBasic.c:29:37: error: initializer element is not constant
   0, -1, 1, err, 1, 0, err, -1, -1, err, 0, 1, err, 1, -1, 0
                                     ^
src/modules/km0/keyboard/keyScanner_encoderBasic.c:29:37: note: (near initialization for ‘encoder_count_delta_table[9]’)
src/modules/km0/keyboard/keyScanner_encoderBasic.c:29:48: error: initializer element is not constant
   0, -1, 1, err, 1, 0, err, -1, -1, err, 0, 1, err, 1, -1, 0
                                                ^
src/modules/km0/keyboard/keyScanner_encoderBasic.c:29:48: note: (near initialization for ‘encoder_count_delta_table[12]’)
make[1]: *** [workers/worker_atmega32u4.mk:85: build/dev/testbed/directWired4withEncoder/obj/src/modules/km0/keyboard/keyScanner_encoderBasic.o] Error 1
make: *** [Makefile:62: dev/testbed:directWired4withEncoder:build] Error 2
